Issue related to agenda item and assignee list selection on deliverable overflowing the scree is now resolved

--- a/app/react/components/sizung/components/EditableAgendaItem/index.css
+++ b/app/react/components/sizung/components/EditableAgendaItem/index.css
@@ -5,7 +5,7 @@
 .root {
   z-index: 100;
   position: absolute;
-  width: 30em;
+  width: 30ch;
   top: 0;
   right: 0;
 
