--- a/app/react/components/sizung/components/EditableUser/index.css
+++ b/app/react/components/sizung/components/EditableUser/index.css
@@ -5,7 +5,7 @@
 .root {
   z-index: 100;
   position: absolute;
-  width: 30em;
+  width: 30ch;
   top: 0;
 
   border: 1px solid lightgray;
